preparering for new realase -- pre 1

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="X! DI Web App" />
-    <title>ULVOXO VERSITY</title>
+    <meta name="description" content="OR Web App" />
+    <title>Openroot Classes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
